<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="HeadData" Id="{5887be85-1882-4ca1-95ab-41df9f09e6e9}">
    <Declaration><![CDATA[TYPE HeadData :
STRUCT
WriteData:	 	ARRAY [0..63] OF BYTE;	
ReadData:		ARRAY [0..63] OF BYTE;
SpecialCommand:	ARRAY [0..63] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>