<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="Memory" Id="{aa76531b-22af-4995-85a2-05f16635187a}">
    <Declaration><![CDATA[TYPE Memory :
STRUCT

Memory:				ARRAY [0..63] OF BYTE;	
OldCommandIn:		BYTE;
OldChannelIn:		BYTE;
OldStatus:			BYTE;
OldReplyCounter:	BYTE;
Headnumber:			USINT;
Togglebit:			USINT;


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>